# bot_robert

./: .gitignore  Cargo.toml  README.md
bot_robert_lib/: Cargo.toml
bot_robert_lib/resource/: dad_jokes.json
bot_robert_lib/src/: converter.rs  database.rs  error.rs  factory.rs  lib.rs  model.rs  resources.rs  service.rs  slash_command.rs  tasks.rs  transfer.rs
bot_robert_lib/src/converter/: slack_action_option_to_model.rs  slack_block_actions_action_to_model.rs  slack_block_actions_states_to_model.rs  slack_block_actions_to_model.rs  slack_block_to_transfer.rs  slack_element_to_transfer.rs  slack_response_to_transfer.rs  slack_text_to_transfer.rs  slack_text_transfer_to_model.rs
bot_robert_lib/src/database/: database_connector.rs
bot_robert_lib/src/error/: database_error.rs  json_decode_error.rs  standard_error.rs  validation_error.rs
bot_robert_lib/src/factory/: lunch_spot_factory.rs
bot_robert_lib/src/model/: joke.rs  lunch_spot.rs  slack_action_option.rs  slack_action_type.rs  slack_block.rs  slack_block_actions.rs  slack_block_actions_action.rs  slack_block_actions_state.rs  slack_element.rs  slack_element_type.rs  slack_response.rs  slack_text.rs  slack_text_type.rs
bot_robert_lib/src/service/: messaging.rs  slack_api_client.rs
bot_robert_lib/src/slash_command/: command_ingest.rs  converter.rs  factory.rs  handlers.rs  interactive_response_ingest.rs  joke_handler.rs  jokes.rs  model.rs  transfer.rs
bot_robert_lib/src/slash_command/converter/: slack_block_actions_action_to_model.rs  slack_block_actions_states_to_model.rs  slack_block_actions_to_model.rs  slack_block_to_transfer.rs  slack_element_to_transfer.rs  slack_response_to_transfer.rs  slack_text_to_transfer.rs  slack_text_transfer_to_model.rs
bot_robert_lib/src/slash_command/factory/: lunch_options_factory.rs  lunch_spot_response_factory.rs  (+1 more)
bot_robert_lib/src/tasks/: beer_o_clock.rs  runner.rs  scheduled_task.rs  task.rs
bot_robert_lib/src/transfer/: slack_action_option_transfer.rs  slack_block_actions_action_transfer.rs  slack_block_actions_payload_transfer.rs  slack_block_actions_state_transfer.rs  slack_block_actions_states_transfer.rs  slack_block_actions_user_transfer.rs  slack_block_transfer.rs  slack_element_transfer.rs  slack_form_payload_transfer.rs  slack_response_transfer.rs
bot_robert_server/: Cargo.toml
bot_robert_server/docker/bot_robert_dev/: app.Dockerfile  docker-compose-bot_robert.yml
bot_robert_server/src/: main.rs  server.rs
bot_robert_server/src/api/: slack.rs  test.rs
(+42 files in other folders)
