[package]
name = "bot_robert_lib"
version = "0.1.0"
authors = ["CanadianCommander <ben.benetti@shaw.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde = "^1.0.126"
regex = "^1.5.4"
rand = "^0.8.4"
lazy-regex = "^2.2.1"