[package]
name = "bot_robert_lib"
version = "0.1.0"
authors = ["CanadianCommander <ben.benetti@shaw.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde = "^1.0.126"
regex = "^1.5.4"
rand = "^0.8.4"
lazy-regex = "^2.2.1"
lazy_static = "^1.4.0"
mongodb = "^1.2.2"
futures = "^0.3"
async-trait = "^0.1.50"
tokio = { version = "^1.9.0", features = ["sync"] }
actix-web = {version = "^3.0.0", features = ["openssl"] }