[package]
name = "bot_robert_server"
version = "0.1.0"
authors = ["CanadianCommander <ben.benetti@shaw.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="^3.0.0"
serde = "^1.0.126"
bot_robert_lib = {path = "../bot_robert_lib"}