[package]
name = "bot_robert_server"
version = "0.1.0"
authors = ["CanadianCommander <ben.benetti@shaw.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "^2.2.0"
actix-web = {version = "^3.0.0", features = ["openssl"] }
serde = "^1.0.126"
bot_robert_lib = {path = "../bot_robert_lib"}
lazy-regex = "^2.2.1"
serde_json = "^1.0"